[package]
name = "git-chain"
version = "0.0.9"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.19.0"
clap = "2.33.3"
colored = "2.1.0"
between = "0.1.0"
rand = "0.8.5"
regex = "1.10.6"

[dev-dependencies]
assert_cmd = "2.0.16"
console = "0.15.8"